--- a/src/app.html
+++ b/src/app.html
@@ -5,9 +5,10 @@
 		<meta name="description" content="" />
 		<link rel="icon" href="%svelte.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Shop | Monogram Consoles and Modules | Monogram Creative Console</title>
 		%svelte.head%
 	</head>
 	<body>
-		<div>%svelte.body%</div>
+		%svelte.body%
 	</body>
 </html>
